<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <Button
            android:id="@+id/btnLogout"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginVertical="20dp"
            android:text="@string/logout"
            tools:ignore="RtlHardcoded" />
        <Button
            android:id="@+id/btnGetAllData"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/teal_200"
            android:text="@string/tampilkan_semua_data"
            android:textColor="#5E35B1" />
        <EditText
            android:id="@+id/search_film"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/search_film"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColorHint="#757575" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnCari"
            android:text="@string/search" />

        <Button
            android:id="@+id/btnTambah"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#DD9E42"
            android:text="@string/tambah"
            android:textColor="#4E342E" />

        <Button
            android:id="@+id/btnHapus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#FF6E40"
            android:text="@string/delete"
            android:textColor="#263238" />
        <TextView
            android:id="@+id/list_film"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/list_film"
            android:textAlignment="center" />


        <LinearLayout
            android:orientation="horizontal"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false">

            <LinearLayout
                android:id="@+id/layoutfilm"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:layout_weight="1"
                android:layout_marginTop="15dp"
                android:orientation="vertical"
                tools:ignore="InefficientWeight">

                <TextView
                    android:id="@+id/data_film"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@string/judul_film" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</ScrollView>